@@ -27,7 +27,7 @@ const countryLookup = maxmind.openSync('./GeoLite2-Country.mmdb');
 
 const cdnboxStates = require('./cdnboxStates.js');
 
-const image1x1 = new Buffer([
+const image1x1 = Buffer.from([
     0x47, 0x49, 0x46, 0x38, 0x39, 0x61, 0x01, 0x00, 0x01, 0x00, 
     0x80, 0x00, 0x00, 0xff, 0xff, 0xff, 0x00, 0x00, 0x00, 0x2c, 
     0x00, 0x00, 0x00, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x02, 
@@ -39,7 +39,7 @@ const httpserver = http.createServer((req, res) => {
 
   // acces libre
   if (req.url.startsWith("/cdn/image.gif")) {
-    res.writeHead(200, { 'Content-Type': 'image/gif', 'Timing-Allow-Origin': '*' });
+    res.writeHead(200, { 'Content-Type': 'image/gif', 'Timing-Allow-Origin': '*', 'Connection': 'close' });
     res.end(image1x1);
   } else if (req.url.startsWith("/cdn/perf.js")) {
     res.writeHead(200, { 'Content-Type': 'text/javascript; charset=UTF-8', 'Timing-Allow-Origin': '*',
@@ -581,7 +581,7 @@ function perfbeacon(req,res) {
 }
 
 function atob(str) {
-  return new Buffer(str, 'base64').toString('binary');
+  return Buffer.from(str, 'base64').toString('binary');
 }
 
 process.on('uncaughtException', (err) => {
