@@ -98,7 +98,7 @@ class cdnboxDNSPacket {
     }
 
     // initialize response
-    this.buff = new Buffer.allocUnsafe(512);
+    this.buff = Buffer.allocUnsafe(512);
     this.curpos = 0;
 
     // header
@@ -119,7 +119,7 @@ class cdnboxDNSPacket {
 
   // contruct a push data packet
   static getpushbwpacket(dataname, data) {
-    var buff = new Buffer.allocUnsafe(512);
+    var buff = Buffer.allocUnsafe(512);
 
     // header
     buff.writeUInt16BE(Math.floor(Math.random() * 65536),0); // ID
