@@ -36,33 +36,35 @@ process.on('message', (msg) => {
 
 // probes perf
 function getPerf(msg) {
-  var getter = (msg.options.protocol == "http:"?http:https);
-  getter.get(msg.options, function () {
-      var starttime = Date.now();
-      return function (res) {
-          res.on('data', (d) => {
-              var perf = Date.now() - starttime;
-              // send probe only if not too late.
-              if (perf < maxinterval) {
-                process.send({ "name": msg.name, 'status': res.statusCode, 'perf': perf });
-              }
-              console.log(' "type": "probe", "target": "' + msg.name + '",' +
-                          ' "time": ' + perf + ', "status": ' + res.statusCode);
-          });
-      }
-  }())
-  .setTimeout(5000)
-  .on('error', function () {
-      var starttime = Date.now();
-      return function (e) {
-          var perf = Date.now() - starttime;
-          // send probe only if not too late.
-          if (perf < maxinterval) {
-            process.send({ "name": msg.name, 'status': 'fail', 'perf': perf });
-          }
-          console.log(' "type": "probe", "target": "' + msg.name + '",' + ' "time": ' + perf + ', "status": 0');
-          cdnboxStates.logerror('"error": "probe on ' + msg.name + ': ' + e.toString().replace(/"/g,'') + '"');
-      }
-  }());
+  setTimeout( function() {
+    var getter = (msg.options.protocol == "http:"?http:https);
+    getter.get(msg.options, function () {
+        var starttime = Date.now();
+        return function (res) {
+            res.on('data', (d) => {
+                var perf = Date.now() - starttime;
+                // send probe only if not too late.
+                if (perf < maxinterval) {
+                  process.send({ "name": msg.name, 'status': res.statusCode, 'perf': perf });
+                }
+                console.log(' "type": "probe", "target": "' + msg.name + '",' +
+                            ' "time": ' + perf + ', "status": ' + res.statusCode);
+            });
+        }
+    }())
+    .setTimeout(5000)
+    .on('error', function () {
+        var starttime = Date.now();
+        return function (e) {
+            var perf = Date.now() - starttime;
+            // send probe only if not too late.
+            if (perf < maxinterval) {
+              process.send({ "name": msg.name, 'status': 'fail', 'perf': perf });
+            }
+            console.log(' "type": "probe", "target": "' + msg.name + '",' + ' "time": ' + perf + ', "status": 0');
+            cdnboxStates.logerror('"error": "probe on ' + msg.name + ': ' + e.toString().replace(/"/g,'') + '"');
+        }
+    }());
+  }, Math.round(Math.random()*4000));
 }
 
