@@ -402,7 +402,8 @@ function getPerf(cdnbox) {
       if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
       logerror('"error": "getPerf: timeout on ' + cdnbox.name + '"');
     }
-    probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions });
+    probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
+                    function (e) { if (e !== null) probeChild = undefined; });
   }
 }
 
@@ -436,10 +437,7 @@ function getwhoami() {
 
 function testCDNBoxes() {
   cdnboxStates.penalbucket.get();
-  cdnboxStates.config.cdnboxes.forEach(function(cdnbox) { 
-    // dispatch measurement over time to avoid overload.
-    setTimeout(() => { getPerf(cdnbox) }, Math.floor(Math.random() * 5000));
-  });
+  cdnboxStates.config.cdnboxes.forEach(function(cdnbox) { getPerf(cdnbox); });
   // localtests
   if (cdnboxStates.local.config.localtests) dolocaltests(cdnboxStates.local);
   // get metrics
@@ -560,7 +558,7 @@ function logerror(text) {
 cdnboxStates.logerror = logerror;
 
 function convertIPv6totab(address) {
-  var tab = new Buffer.alloc(16, 0);
+  var tab = Buffer.alloc(16, 0);
   var index = 0, lastindex = 0, tabindex = 0;
   while (index < address.length) {
     if (address[index] == ':') {
